Fix broken logo on small screens
CSS rule for small screens has been changed. Plasma logo position and relative width is set to ensure proper display on the header of the page.

--- a/themes/quest/style.css
+++ b/themes/quest/style.css
@@ -1396,6 +1396,10 @@ form.search .fa-search:before {
 @media (max-width: 991px) {
   .logo {
     text-align: center !important;
+    padding: 0;
+    position: absolute;
+    left: 0px;
+    width: 45%;
   }
 
   .csstransitions .logo img {
